# rem100

./: Cargo.toml  README-web.md  README.md  Trunk.toml  build-web.sh  build.rs  flake.nix  index.html
.github/workflows/: deploy-web.yml
assets/: style.css
patches/nusb/: Cargo.toml
patches/nusb/examples/: bulk_io.rs
patches/nusb/src/: descriptors.rs  device.rs  enumeration.rs  error.rs  lib.rs  maybe_future.rs
patches/nusb/src/platform/webusb/: device.rs  enumeration.rs  mod.rs  transfer.rs
patches/nusb/src/transfer/: buffer.rs
src/: chips.rs  device.rs  download.rs  error.rs  firmware.rs  fpga.rs  hexdump.rs  image.rs  lib.rs  main.rs  sdram.rs  spi.rs  system.rs  tar.rs  trace.rs  usb.rs  web.rs  web_device.rs  web_main.rs  web_usb.rs
web/: index.html
