[package]
name = "rem100"
version = "0.1.0"
edition = "2021"
authors = ["Google Inc.", "Rust port contributors"]
description = "EM100Pro SPI flash emulator command-line utility"
license = "GPL-2.0-only"
repository = "https://github.com/user/rem100"
keywords = ["em100", "spi", "flash", "emulator", "dediprog"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
# USB communication (native Rust, no libusb)
nusb = "0.2"
futures-lite = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async HTTP for downloads
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

# XZ decompression for tar.xz archives
xz2 = "0.1"

# Tar archive handling
tar = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Byte order conversion
byteorder = "1"

# Directory paths
dirs = "5"

# Signal handling
ctrlc = "3"

# Progress display
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
